--- a/public/css/style.css
+++ b/public/css/style.css
@@ -832,12 +832,12 @@ ul.pagination .active a {
 }
 
 .hero-area {
-  padding: 200px 0 0;
+  padding: 100px 0 0;
 }
 
-.hero-area .content-block {
-  padding-bottom: 200px;
-}
+/*.hero-area .content-block {*/
+  /*padding-bottom: 200px;*/
+/*}*/
 
 .hero-area .advance-search {
   background: #fff;
